<resources>
    <string name="app_name">CapitalNow</string>
    <string name="app_schema">CapitalNow.in</string>
    <string name="error_no_internet_title">No Network</string>
    <string name="error_no_internet">Please check your network connection</string>
    <string name="error_failure">Sorry..! Something went wrong at our end. Please try again after some time.</string>
    <string name="eligible_message">Currently your profile cannot be processed as it does not meet our eligibility criteria.</string>
    <string name="app_hold_message">Your membership has been put under default as you have not adhered to the loan repayment terms/schedule.</string>
    <string name="save_Signature">Please save the Signature</string>
    <string name="error_request_timeout">Connection timeout</string>
    <string name="title_error">Error</string>
    <string name="title_alert">Alert!</string>
    <string name="pan_success_alert">Yay! Thank you for verifying your PAN. Your credit eligibility is now unlocked!</string>
    <string name="bank_success_alert">Yay! Your Bank statement is uploaded successfully.</string>
    <string name="pan_failure_alert">PAN Card verification failed.</string>
    <string name="bank_failure_alert">Bank statement uploaded failed</string>
    <string name="success_continue">CONTINUE</string>
    <string name="failure_retry">RETRY</string>
    <string name="back_button_exit">Do you want to exit the App?</string>
    <string name="back_button_double_click_exit">Press back button once again to exit App</string>
    <string name="prompt_mobile">Mobile Number</string>
    <string name="action_log_in">LOGIN</string>
    <string name="error_invalid_mobile_no">Please enter valid mobile number</string>
    <string name="error_pdf_format">*We accept only pdf format</string>
    <string name="error_jpg_format">*We accept only JPEG,PNG and Pdf format</string>
    <string name="doc_concent">*Please provide full and accurate documents for immediate loan transfer. The loan disbursal is subject to the availability of clear and proper documents.</string>
    <string name="facebook_app_id">1026269544602423</string>
    <string name="fb_login_protocol_scheme">fb1026269544602423</string>
    <string name="update_linkedin_app_title">Download/Update LinkedIn App</string>
    <string name="update_linkedin_app_message">To connect with LinkedIn you need to download/update LinkedIn App. Would you like to do it?</string>
    <string name="update_linkedin_app_download">Download</string>
    <string name="update_linkedin_app_cancel">Cancel</string>
    <string name="apply_loan">Apply Loan</string>
    <string name="apply_now">Apply Now</string>
    <string name="my_loans">My Loans</string>
    <string name="active_loans">Active Personal Loans</string>
    <string name="twl_active_loans">Active Two Wheeler Loan</string>
    <string name="cleared_loans">Cleared Loans</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="loan_partners">Loan Partners</string>
    <string name="our_partners">Our Partners</string>
    <string name="latest_documents">Latest Documents</string>
    <string name="menu_item_kyc">Verify KYC</string>
    <string name="notifications">Notifications</string>
    <string name="refer_and_earn">Refer &amp; Earn</string>
    <string name="profile">Profile</string>
    <string name="pan_verification">PanVerification</string>
    <string name="home">Home</string>
    <string name="aadhar_otp">Aadhar Verification</string>
    <string name="request_bank_change_text1">As per your request, you are being directed to the bank account details upgradation page wherein you are required to provide accurate details of your new active bank account to be synced and updated to your existing account so that you enjoy a seamless and hassle-free experience with us.</string>
    <string name="request_bank_change_text2">This is the maximum amount we can deduct over the course of your e-NACH tenure. It includes your principle along with accrued interests and handling charges.</string>
    <string name="add_references">Add References</string>
    <string name="add_latest_references">Add Latest References</string>
    <string name="no_support_for_storage">Sorry..! Your device does not support storage.</string>
    <string name="documents_uploading_failed">Documents uploading Failed. Please try again..!</string>
    <string name="need_location_permission"><b>CapitalNow</b> requires Location Permission.</string>
    <string name="rate_us_dialog_title">Rate this app</string>
    <string name="rate_us_dialog_message"><b>We\'re glad you\'re enjoying\nCapitalNow.</b>\n\nYour feedback is valuable.\nHelps us improve the app.</string>
    <string name="rate_us_dialog_ok">Rate now</string>
    <string name="rate_us_dialog_cancel">Later</string>
    <string name="rate_us_dialog_no">No Thanks</string>
    <string name="app_update_message">We have updated our CapitalNow Android Mobile App. Please install the latest version from the Play Store to avail Instant Loans.</string>
    <string name="default_notification_channel_id" translatable="false">capitalnow_default_channel</string>
    <string name="apply_loan_processing_fee_title">*Processing Fees of %d + GST is applicable.</string>
    <string name="apply_loan_processing_fee_sub_title">*Processing Fee of %d is applicable for Loan Amounts up to 5000 and Processing Fee of %d is applicable for Loan Amounts more than 5000</string>
    <string name="apply_loan_confirmation">Are you sure you want to apply for loan?</string>
    <string name="cancel_pay_confirmation">Do you really want to cancel the payment. Are you sure?</string>
    <string name="redeem_confirmation">Are you sure you want to redeem?</string>
    <string name="title_history">History</string>
    <string name="google_play_services_not_available">Sorry..! Google Play Services are not available on this device.</string>
    <string name="google_oauth_2_0_client_id">4471361792-dgnbl01okgl7p2kf5gsrhleoi4baqj1g.apps.googleusercontent.com</string>
    <string name="terms_checkbox_alert_msg"><![CDATA[Please agree to CapitalNow\'s Terms & Conditions and Privacy Policy and authorize CapitalNow]]></string>
    <string name="skip">Skip</string>
    <string name="location">Location</string>
    <string name="storage">Storage</string>
    <string name="contacts">Contacts</string>
    <string name="location_permission_content">Our app collects and monitors the information about the location of your device to check serviceability of your loan application, prevent fraudulent activity and also provide customized loan offers.</string>
    <string name="storage_permission_content">Our app require storage Permission so that you can easily upload the right KYC related documents for quick submission of loan application. This will help us enhance your experience on our App.</string>
    <string name="sms_permission_content">We don’t collect or store your personal SMS from your inbox. We only access your transactional SMS which helps us perform a credit risk assessment to determine your risk profile and to provide you with the appropriate credit analysis.</string>
    <string name="calendar_permission_content">To better understand your credit profile, we request permission to access your calendar events.</string>
    <string name="apps_permission_content">We access your list of the installed applications’ metadata information to better understand your credit worthiness.</string>
    <string name="permission_deny_page_title">For processing your instant loan application, please provide the required permissions</string>
    <string name="permission_deny_page_content1">Please go back and agree to provide the permissions as requested after clicking I Agree.</string>
    <string name="permission_deny_page_content2">If you deny any of the permissions and select ‘Never Ask Again’, then you will need to go to your Phone Settings to provide permissions.</string>
    <string name="permissions_heading">We seek these permissions to provide accurate credit details and seamless loan disbursement process.</string>
    <string name="get_started_title1">PaperLess Registration</string>
    <string name="get_started_content1">Our application is completely online from start to finish. Complete a simple one-time registration process to become an approved borrower.</string>
    <string name="get_started_title2">Swift Verification</string>
    <string name="get_started_content2">We evaluate you by considering your Personal &amp; Professional Credibility along with your Social Credibility.</string>
    <string name="get_started_title3">Instant Fund Transfer</string>
    <string name="get_started_content3">Upon Membership approval, you can avail Personal Loan instantly with one click 24*7 without any physical verification.</string>
    <string name="federal_registration_title"><font color='#ffffff'>We will simplify your</font> <font color='#178BFF'>Registration</font><font color='#ffffff'> Process.</font> </string>
    <string name="not_you_logout"> <font color='#FCB9C0'><u>Logout</u></font><font color='#ffffff'></font> </string>
    <string name="skip_this"> <font color='#2300DA'><u>Skip for this step</u></font><font color='#ffffff'></font> </string>
    <string name="title_basic_details">Basic Details</string>
    <string name="title_already_have_dealer">Already have a dealer</string>
    <string name="title_details_of_purchase">Confirm your details</string>
    <string name="title_choose_dealer">Choose a dealer</string>
    <string name="title_missing_details">Missing Details</string>
    <string name="title_professional_details">Professional Details</string>
    <string name="title_emi_details">EMI Details</string>
    <string name="validate">VALIDATE</string>
    <string name="view_agree">view &amp; agree</string>
    <string name="title_pan_verification">PAN Verification</string>
    <string name="select_bank_eNach">Select Bank for e-Nach Mandate</string>
    <string name="title_aadhaar_verification">Aadhar Verification</string>
    <string name="title_two_wheeler_loan">Two Wheeler Loan</string>
    <string name="title_docs">Upload below documents</string>
    <string name="title_Signature">Signature Consent*</string>
    <string name="applynow_eligibility_text">Heads’ Up! We are analysing multiple data points to bring you the eligibility right now, it might be different from the Bureau.</string>
    <string name="enter_bank_details">Provide updated bank details which will be used for loan disbursal</string>
    <string name="signature_text">Signature should be same as PAN card</string>
    <string name="search_dealer">Search Your Dealer</string>
    <string name="choose_city"> Search City</string>
    <string name="choose_area">Search Area</string>
    <string name="choose_varient">Choose Variant</string>
    <string name="choose_color">Choose Color</string>
    <string name="search_two_wheeler">Search for two wheeler</string>
    <string name="search_for_dealer">Search for dealer</string>
    <string name="search_brand">Search Brand</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="check_internet">Please check your internet connection \n and try again</string>
    <string name="rate_us_title">Rate Us</string>
    <string name="rate_us_msg1">Your opinion matters to us!</string>
    <string name="rate_us_msg2">We strive extremely hard to make CapitalNow better for you, and would love to know how did you enjoy our app?</string>
    <string name="rate_us_now_btn_text">RATE NOW</string>
    <string name="rate_us_no_thanks_btn_text">NO, THANKS</string>
    <string name="rate_us_later_btn_text">MAYBE LATER</string>
    <string name="next_continue">CONTINUE</string>
    <string name="pick_from_map"><u>Pick from Map</u></string>
</resources>